# sfml_screen

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  general_config.h.in
SFML/lib/windows/: sfml-audio.exp  sfml-audio.lib  sfml-graphics.exp  sfml-graphics.lib  sfml-main.lib  sfml-network.exp  sfml-network.lib  sfml-system.exp  sfml-system.lib  sfml-window.exp  sfml-window.lib
cmake/: Functions.cmake
conf/: config.cfg
resources/shaders/: gradient.frag  gradient.vert
src/: CMakeLists.txt  color_changing_screen.cpp  color_changing_screen.h  context.cpp  context.h  error.h  general_config.h  gradient_screen.cpp  gradient_screen.h  main.cpp  menu.cpp  menu.h  multicolored_screen.h  screen.cpp  screen.h
